# sec-filing-intelligence-copilot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.ui  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: companies.sample.yaml  companies.yaml  eval.yaml  prompts.yaml  retrieval.yaml
constraints/: docker-runtime.txt
k8s/base/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  corpus-refresh-cronjob.yaml  corpus-refresh-job.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  ui-deployment.yaml  ui-hpa.yaml  ui-service.yaml
k8s/overlays/gke-common/: api-service-grafana-scrape-patch.yaml  kustomization.yaml  pd-standard-rwo-storageclass.yaml  pvc-patch.yaml  ui-deployment-cpu-patch.yaml
k8s/overlays/gke-student/: api-deployment-gpu-patch.yaml  api-hpa-cap-patch.yaml  kustomization.yaml  pvc-patch.yaml
scripts/: compare_retrieval_modes.py  v2_cpu_walkthrough.py
src/sec_copilot/: __init__.py
src/sec_copilot/api/: __init__.py  app.py  coverage.py  metrics.py  models.py  service.py
src/sec_copilot/config/: __init__.py  companies.py  retrieval.py  runtime.py
src/sec_copilot/eval/: __init__.py  artifacts.py  cli.py  config.py  curated_examples.py  dataset.py  metrics.py  offline_runtime.py  providers.py  ragas_adapter.py  (+2 more)
tests/fixtures/: example_queries.yaml
tests/integration/: test_live_ingestion.py
tests/unit/: __init__.py  retrieval_helpers.py  test_api_v5.py  test_chunker.py  test_companies_config.py  test_corpus_refresh.py  test_dense_retrieval.py  test_downloader.py  test_embedding_device.py  test_eval_cli.py  test_eval_contracts.py  test_eval_metrics.py  test_eval_ragas_adapter.py  test_eval_runner_ragas.py  test_frontend_client_v6.py  test_frontend_contracts_v6.py  test_frontend_helpers_v6.py  test_grounded_answer_pipeline.py  test_hybrid_retrieval_v3.py  test_ingest_cli.py  test_parser.py  test_pipeline.py  test_prompt_packing_regression.py  test_rerank_tiebreaks.py  test_runtime_config.py  test_smoke.py
(+52 files in other folders)
