[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-filing-intelligence-copilot"
version = "0.1.0"
description = "Production-style source-grounded RAG system over SEC filings."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Shreyash Kondakindi" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "PyYAML>=6.0",
  "requests>=2.32",
  "tiktoken>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "live_sec: hits live SEC endpoints and is skipped by default",
]
